<resources>
    <string name="app_name">Music HeartControl</string>
    <string name="hardware_revision">Hardware revision</string>
    <string name="software_revision">Software revision</string>
    <string name="serial_number">Serial number</string>
    <string name="device_name">Názov zariadenia</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="cancel">Zrušiť</string>
    <string name="save">Uložiť</string>

    <string name="music_menu_background">Music Menu Background</string>
    <string name="music_shade">Music Shade</string>
    <string name="heart_shade">Heartrate Shade</string>
    <string name="stat_shade">Statistic Shade</string>
    <string name="settings_shade">Settings Shade</string>
    <string name="default_icon">Default Icon</string>
    <string name="rain_icon">Rainbow Icon</string>
    <string name="red_icon">Red Icon</string>
    <string name="green_icon">Green Icon</string>
    <string name="blue_icon">Blue Icon</string>

    <string name="ble_not_supported">Bluetooth features are not supported on this device.</string>
    // ak nepodporuje bloototh
    <string name="title_devices">Title Devices</string>
    <string name="error_bluetooth_not_supported">Error bluetooth not supported.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No Data</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_device">Unknown device</string>


    <string name="menu_connect">Menu content</string>
    <string name="menu_disconnect">Menu disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="label_device_address">Device Address</string>
    <string name="label_state">State</string>
    <string name="label_data">Data</string>
    <string name="title_activity_login">Login</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">MusicHeartRate</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbMusicHeartRate</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>


    <string name="title_activity_user_profile">Užívateľský Profil</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="age_question">Aký je váš vek?</string>
    <string name="gender_question">Aké ste pohlavie?</string>
    <string name="working_question">Aké sú vaše pracovné návyky?</string>

    <string name="sport_question">Športujete?</string>
    <string name="patology_question">Trpíte srdcovo/cievnym ochorením?</string>

    <!--    set up new user screen-->
    <string name="smoking_question">Fajčíte?</string>
    <string name="name_question">How should I call you?</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string-array name="gender_values">
        <item>Muž</item>
        <item>Žena</item>
    </string-array>
    <string-array name="sport_activity_values">
        <item>Nešportujem</item>
        <item>Občas športujem</item>
        <item>Som profesionálny športovec</item>
    </string-array>
    <string-array name="smoking_values">
        <item>Nefajčím</item>
        <item>Fajčím</item>
    </string-array>
    <string-array name="work_activity_values">
        <item>V práci sa nepohybujem</item>
        <item>Pri práci sa bežne pohybujem</item>
        <item>Nepracujem</item>
    </string-array>
    <string-array name="patology_values">
        <item>Netrpím žiadnym srdcovo/cievnym ochorením</item>
        <item>Trpím srdcovo/cievnym ochorením</item>
    </string-array>

    <string-array name="emotion_values">
        <item>Bez výberu</item>
        <item>Povzbudzujúca</item>
        <item>Neutrálna</item>
        <item>Ukľudňujúca</item>
    </string-array>

    <string name="short_test_info">Tento test trvá 3 minúty počas ktorých musíte zostať v úplnom pokoji.
        Pre nameranie správnych hodnôt sa prosím usaďte, zaujmite pohodlnú pozíciu a počas trvania testu nevykonávajte źiadnu aktivitu</string>
    <string name="long_test_info">Dlhý test trvá 5 minút. Počas tohto času musíte zostať v úplnom pokoji.
        Dlhšie meranie zarućí presnejší výsledok. Pred testom sa prosím usaďte, zaujmite pohodlnú pozíciu a počas trvania testu nevykonávajte źiadnu aktivitu</string>
    <string name="reset_text">Touto akciou zmažete všetky dáta telesného tepu z doteraz uskutočnených testov.
        Priemerná hodnota teseného tepu sa určí na základe základných informácii vyplnených v profile.</string>
</resources>
